fixed wrapping bug on Faq component

--- a/src/components/faq/style.scss
+++ b/src/components/faq/style.scss
@@ -27,6 +27,6 @@ $whitespace: 1rem;
   &__answer {
     margin: 0;
     padding-left: 2rem;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 }
